# MusicVisualizer

./: App.cpp  App.h  Audio.cpp  Audio.h  CMakeLists.txt  CMakePresets.json  FileSystem.h  MusicVisualizer.cpp  MusicVisualizer.h  MusicVisualizer.sln  MusicVisualizer.vcxproj  MusicVisualizer.vcxproj.filters  README.md  Renderer.cpp  Renderer.h  imgui.ini  main.cpp  main.h  vcpkg.json
ShaderCode/FragmentShaders/: Gradients.txt  PurpleYellowWaves.txt  YandexBlob.txt
src/: App.cpp  App.h  GUI.h  ImGUIManager.cpp  ImGUIManager.h  Shader.h  Utils.h
